# CelestiaContent

./: .gitignore  CMakeLists.txt  LICENSE.md  README  README.md  REUSE.toml
.github/workflows/: checks.yml  licenses.yml  translations.yml
.reuse/: dep5
checks/: checkunicode.py
cmake/: FixGettext.cmake  ResizeImage.cmake  install_to_extras_subdir.cmake
data/: CMakeLists.txt  asterisms.dat.license  asteroids.ssc  asteroids_locs.ssc  boundaries.dat.license  charm2.stc  comets.ssc  dwarfplanets.ssc  dwarfplanets_locs.ssc  earth_locs.ssc  extrasolar.ssc  extrasolar.stc  galaxies.dsc  globulars.dsc  interstellar.ssc  jupitermoons_locs.ssc  mars_locs.ssc  marsmoons_locs.ssc  merc_locs.ssc  mercury_locs.ssc  minimal-earthmoon.ssc  minimal-sol.stc  minormoons.ssc  moon_locs.ssc  near_earth_asteroids.ssc  nearstars.stc  neptunemoons_locs.ssc  openclusters.dsc  outersys.ssc  pulsars.stc  revised.stc  ring_locs.ssc  saturnmoons_locs.ssc  solarsys.ssc  spectbins.stc  starnames.dat.license  stars-charm2.stc  stars-named.stc  stars-near.stc  stars-revised.stc  (+14 more)
debian/: celestia-data.install  celestia-data.postinst  celestia-data.prerm  celestia-textures-hires.install  celestia-textures-lores.install  celestia-textures-medres.install  changelog  control  copyright  newsnapshot.sh  rules  watch
extras/: CMakeLists.txt
extras-standard/: CMakeLists.txt
extras-standard/99942_apophis/: 99942_apophis.ssc  CMakeLists.txt
extras-standard/99942_apophis/data/: 99942_apophis.xyzv
extras-standard/99942_apophis/models/: apophis.cmod  apophis.cmod.license
extras-standard/apollo/: CMakeLists.txt  apollo.ssc
extras-standard/apollo/models/: apollo.3ds.license
extras-standard/cassini/: CMakeLists.txt  cassini.ssc
extras-standard/cassini/data/: cassini-cruise.xyzv  cassini-saturn_01y.xyzv  cassini-saturn_02y.xyzv  cassini-saturn_03y.xyzv  cassini-saturn_04y.xyzv  cassini-saturn_05y.xyzv  cassini-saturn_06y.xyzv  cassini-saturn_07y.xyzv  cassini-saturn_08y.xyzv  cassini-saturn_09y.xyzv  cassini-saturn_10y.xyzv  cassini-saturn_11y.xyzv  cassini-saturn_12y.xyzv  cassini-saturn_13y.xyzv  cassini-saturn_14y.xyzv  huygens.xyzv
extras-standard/galileo/: CMakeLists.txt  galileo.ssc
extras-standard/galileo/data/: galileo-cruise.xyzv  galileo-probe.xyzv
extras-standard/galileo/models/: galileo-probe.3ds  galileo.cmod
extras-standard/hubble/: CMakeLists.txt  hubble.ssc
extras-standard/interstellar-objects/: CMakeLists.txt  interstellar-objects.ssc
extras-standard/interstellar-objects/data/: borisov.xyzv  oumuamua.xyzv
extras-standard/iss/: CMakeLists.txt  iss.ssc
extras-standard/iss/models/: iss.cmod
extras-standard/iss/textures/medres/: iss_03.png.license
extras-standard/mir/: CMakeLists.txt  mir.ssc
extras-standard/mir/models/: mir.cmod.license
extras-standard/mir/textures/medres/: metallwhite.png.license  paneliss3.png.license
extras-standard/shroxclassic/: CMakeLists.txt  shroxclassic.ssc
extras-standard/shroxmars/: CMakeLists.txt  shroxmars.ssc
extras-standard/shroxmars/models/: marsglobalsurvr.3ds.license
extras-standard/skylab/: CMakeLists.txt  skylab.ssc
models/: 153591alpha.cmod  153591alpha.cmod.license  153591beta.cmod  153591gamma.cmod  CMakeLists.txt  amalthea.cmod  arrokoth.cmod  arrokoth.cmod.license  asteroid.cms  atlas.cmod  bacchus.cmod  bennu.cmod  bennu.cmod.license  calypso.cmod  daphnis.cmod  deimos.cmod  didymos.cmod  didymos.cmod.license  dimorphos.cmod  dimorphos.cmod.license  elektra.cmod  epimetheus.cmod  eros.cmod  eros.cmod.license  eugenia.cmod  geographos.cmod  geographos.cmod.license  haumea.cms  helene.cmod  hydra.cmod  hygiea.cmod  hyperion.cmod  hyperion.cmod.license  ida.cmod  ida.cmod.license  interamnia.cmod  iris.cmod  iris.cmod.license  itokawa.cmod  itokawa.cmod.license  (+37 more)
models-extra/: CMakeLists.txt  bacchus.3ds.license  castalia.3ds.license  golevka.3ds.license
po/: CMakeLists.txt  Makefile  ar.po  be.po  bg.po  celestia-data.pot  de.po  el.po  en.po  es.po  fr.po  gl.po  hu.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  remove-potcdate.sin  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
textures/: CMakeLists.txt
textures/hires/: CMakeLists.txt  ariel.jpg.license  arrokoth.jpg.license  bstar.jpg.license  deimos.jpg.license  eros.jpg.license  ganymede-lok-mask.png.license  gstar.jpg.license  icy.jpg.license  io.png.license  itokawa.jpg.license  jupiter.jpg.license  miranda-height.jpg.license  moon-normal.png.license  moon.jpg.license  mstar.jpg.license  phobos.jpg.license  rocky.jpg.license  ryugu.jpg.license  saturn.jpg.license  titan-clouds.png.license  titan.png.license  uranus.jpg.license
textures/lores/: CMakeLists.txt  asteroid.jpg.license  bennu.jpg.license  chariklo-rings.png.license  haumea-rings.png.license  neptune.jpg.license  nix.jpg.license  puck.jpg.license  ryugu.jpg.license  saturn.jpg.license  steins.jpg.license  tethys-normal.png.license  triton.jpg.license  uranus.jpg.license  venuslikenight.jpg.license
textures/medres/: CMakeLists.txt  earth-height.jpg.license  ganymede.jpg.license  hyperion.jpg.license  ida.jpg.license  lutetia.jpg.license  mathilde.jpg.license  mstar.jpg.license  neptune.jpg.license  oberon.jpg.license  puck.jpg.license  quaoar-rings.png.license  umbriel.jpg.license  whitedwarf.jpg.license
warp/: CMakeLists.txt
windows/: celestia_content.iss
